<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">刘科领专属版qq</string>
    <string name="action_settings">Settings</string>
    <string name="tiaokuan">
        	本仿qq权属刘科领所有
    </string>
    <string name="hello_world">Hello world!</string>
    <string name="login_button">登 陆</string>
    <string name="login_name">请输入用户账号/电话 /邮箱</string>
    <string name="login_pswd">请输入密码</string>
    <string name="daohang_login">登陆</string>
    <string name="daohang_regist">新用户</string>
    <string name="login_remenber">记住用户名和密码</string>
    <string name="paswd_forgets">忘记密码</string>

</resources>